--- a/index.html
+++ b/index.html
@@ -7,6 +7,54 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!--  -->
+    <header>
+        <h1>Profile</h1>
+        <ul>
+            <li>About</li>
+            <li>Bicycle</li>
+        </ul>
+    </header>
+    <main>
+        <div>
+            <img src="" alt="">
+        </div>
+        <div id="about">
+            <h2>About</h2>
+            <div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <h3>KAKERU MIYAICHI</h3>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                </div>
+            </div>
+        </div>
+        <div id="bicycle">
+            <h2>Bicycle</h2>
+            <div>
+                <div>
+                    <img src="" alt="">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキスト</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキスト</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキスト</p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div>
+            &copy;2020 Profile
+        </div>
+    </footer>
 </body>
 </html>
