--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </header>
     <main>
         <div>
-            <img src="" alt="">
+            <img src="./images/top.jpg" alt="topの自転車の写真">
         </div>
         <div id="about">
             <h2>About</h2>
             <div>
                 <div>
-                    <img src="" alt="">
+                    <img src="./images/man.jpg" alt="KAKERU MIYAICHIさんの画像">
                 </div>
                 <div>
                     <h3>KAKERU MIYAICHI</h3>
@@ -34,17 +34,17 @@
             <h2>Bicycle</h2>
             <div>
                 <div>
-                    <img src="" alt="">
+                    <img src="./images/first.jpg" alt="左の自転車の画像">
                     <h3>タイトルタイトル</h3>
                     <p>テキストテキストテキスト</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="./images/second.jpg" alt="真ん中の自転車の画像">
                     <h3>タイトルタイトル</h3>
                     <p>テキストテキストテキスト</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="./images/third.jpg" alt="右の自転車の画像">
                     <h3>タイトルタイトル</h3>
                     <p>テキストテキストテキスト</p>
                 </div>
