--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <h1>Profile</h1>
+        <h1>
+            <a href="./index.html">Profile</a>
+        </h1>
         <ul>
-            <li>About</li>
-            <li>Bicycle</li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#bicycle">Bicycle</a></li>
         </ul>
     </header>
     <main>
